--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: ["main"]
+    branches: 'main'
 
 jobs:
   build_site:
@@ -27,13 +27,15 @@ jobs:
         run: npm install
 
       - name: Build
+        env:
+          BASE_PATH: '/${{ github.event.repository.name }}'
         run: npm run build
 
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v3
         with:
           # This should match the `pages` option in your adapter-static options
-          path: "build/"
+          path: 'build/'
 
   deploy:
     needs: build_site
